--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,8 +5,8 @@
 
 # Appearance
 appearance:
-  mode: system
-  color: indigo
+  mode: light
+  color: cyan
 
 # SEO
 marketing:
@@ -35,7 +35,7 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
-      text: 'Your Name'
+      text: '薛世喆'
 
 # Site footer
 footer:
