--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,7 +4,7 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: 主页
     url: /
     weight: 10
   - name: Papers
@@ -12,16 +12,16 @@ main:
     weight: 11
   - name: Talks
     url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
     weight: 13
+  # - name: News
+  #   url: /#news
+  #   weight: 14
   - name: Experience
     url: experience/
-    weight: 20
-  - name: Projects
-    url: projects/
-    weight: 30
-  - name: Teaching
-    url: courses/
-    weight: 40
+    weight: 12
+  # - name: Projects
+  #   url: projects/
+  #   weight: 30
+  # - name: Teaching
+  #   url: courses/
+  #   weight: 40
