--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,16 +7,16 @@ main:
   - name: 主页
     url: /
     weight: 10
-  - name: Papers
+  - name: 文章
     url: /#papers
     weight: 11
-  - name: Talks
+  - name: 闲聊
     url: /#talks
     weight: 13
   # - name: News
   #   url: /#news
   #   weight: 14
-  - name: Experience
+  - name: 经历
     url: experience/
     weight: 12
   # - name: Projects
