修改了背景图，简历

--- a/config/_default/module.yaml
+++ b/config/_default/module.yaml
@@ -3,7 +3,7 @@
 ## Install or uninstall themes and plugins here.
 ## Docs: https://gohugo.io/hugo-modules/
 ############################
-
+proxy: https://goproxy.cn
 imports:
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-netlify
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-tailwind
