--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "packageManager": "pnpm@10.14.0",
   "description": "Academic CV starter template for Hugo Blox with Tailwind CSS v4",
   "scripts": {
-    "dev": "hugo server --disableFastRender",
+    "dev": "hugo server",
     "build": "hugo --minify"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.12",
-    "@tailwindcss/typography": "^0.5.10",
-    "tailwindcss": "^4.1.12"
+    "@tailwindcss/typography": "^0.5.10"
+  },
+  "devDependencies": {
+    "tailwindcss": "^4.1.13"
   }
 }
