上传了论文

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,16 @@ main:
   - name: 文章
     url: /#papers
     weight: 11
-  - name: 闲聊
-    url: /#talks
-    weight: 13
-  # - name: News
-  #   url: /#news
-  #   weight: 14
   - name: 经历
     url: experience/
-    weight: 12
+    weight: 12  
+  # - name: 闲聊
+  #   url: /#talks
+  #   weight: 13
+  - name: 个人博客
+    url: /#news
+    weight: 14
+  
   # - name: Projects
   #   url: projects/
   #   weight: 30
