更新了个人经历

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@10.14.0",
   "description": "Academic CV starter template for Hugo Blox with Tailwind CSS v4",
   "scripts": {
-    "dev": "hugo server",
+    "dev": "hugo server -D",
     "build": "hugo --minify"
   },
   "dependencies": {
